--- a/AutoDesk/Detail/DetailViewController.xib
+++ b/AutoDesk/Detail/DetailViewController.xib
@@ -29,9 +29,9 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qpM-tU-4D0">
-                    <rect key="frame" x="54" y="153" width="46" height="48"/>
+                    <rect key="frame" x="50" y="426" width="50" height="50"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <state key="normal" title="拍照">
+                    <state key="normal" backgroundImage="camera.png">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <connections>
@@ -54,4 +54,7 @@
             <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
         </view>
     </objects>
+    <resources>
+        <image name="camera.png" width="512" height="512"/>
+    </resources>
 </document>
