--- a/AutoDesk/Detail/DetailViewController.xib
+++ b/AutoDesk/Detail/DetailViewController.xib
@@ -16,7 +16,7 @@
             <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ncQ-L7-yjE">
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="avatar.png" translatesAutoresizingMaskIntoConstraints="NO" id="ncQ-L7-yjE">
                     <rect key="frame" x="212" y="84" width="600" height="500"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 </imageView>
@@ -62,6 +62,7 @@
         </view>
     </objects>
     <resources>
+        <image name="avatar.png" width="1024" height="756"/>
         <image name="camera.png" width="512" height="512"/>
         <image name="save.png" width="128" height="128"/>
     </resources>
