--- a/TMQuiltView/CustomerCell.xib
+++ b/TMQuiltView/CustomerCell.xib
@@ -25,13 +25,27 @@
                     <color key="textColor" red="1" green="0.086457343330000005" blue="0.25325823650000001" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="camera.png" id="cIJ-dh-iHv">
+                    <rect key="frame" x="126" y="71" width="20" height="20"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" heightSizable="YES"/>
+                </imageView>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pen.png" id="krv-Zx-u3t">
+                    <rect key="frame" x="126" y="31" width="20" height="20"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" heightSizable="YES"/>
+                </imageView>
             </subviews>
             <color key="backgroundColor" red="0.82432489809782605" green="0.82432489809782605" blue="0.82432489809782605" alpha="0.66000000000000003" colorSpace="calibratedRGB"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="deskLabel" destination="8Yf-Rp-rb8" id="B8x-9B-j8O"/>
                 <outlet property="nameLabel" destination="dVs-iQ-6Gd" id="zO1-3S-fYL"/>
+                <outlet property="pen" destination="krv-Zx-u3t" id="aqh-Pc-H8a"/>
+                <outlet property="photoView" destination="cIJ-dh-iHv" id="f8o-dj-hCp"/>
             </connections>
         </view>
     </objects>
+    <resources>
+        <image name="camera.png" width="512" height="512"/>
+        <image name="pen.png" width="256" height="256"/>
+    </resources>
 </document>
